Add in IoC Container in routes file temporarily to get tests to pass.

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
 			"Authority": "app/"
 		},
 		"psr-4": {
-            "GamingCalendar\\": "app/GamingCalendar"
+            "GamingCalendar\\": "app/"
         }
 	},
 	"scripts": {
