--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
 			"Authority": "app/"
 		},
 		"psr-4": {
-            "GamingCalendar": "app/"
+            "GamingCalendar\\": "app/"
         }
 	},
 	"scripts": {
