--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,13 @@ language: php
 php: 
   - 5.4
   - 5.5
+  - 5.6
   - hhvm
 
 before_script:
-  - curl -s http://getcomposer.org/installer | php
-  - php composer.phar install --prefer-dist --no-interaction
+  - composer install --prefer-dist --no-interaction
 
-script: phpunit --coverage-clover=coverage.clover
+script: vendor/bin/phpspec run
 
 after_script:
   - wget https://scrutinizer-ci.com/ocular.phar
