--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 		"mockery/mockery": "dev-master@dev",
 		"phpunit/phpunit": "3.7.*",
 		"phpspec/phpspec": "2.0.*@dev",
-        "benconstable/phpspec-laravel": "*"
+        "benconstable/phpspec-laravel": "*",
+        "zizaco/factory-muff": "dev-master"
 	},
 	"require-dev": {
         "way/generators": "2.*",
