Change over to behat and BDD initial feature and REST testing. Travis build will fail due to SQLite setup.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ php:
 before_script:
   - composer install --prefer-dist --no-interaction
 
-script: vendor/bin/phpspec run
+script: vendor/bin/behat
 
 after_script:
   - wget https://scrutinizer-ci.com/ocular.phar
