--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ php:
   - hhvm
 
 before_script:
+  - sudo sed -i -e "/DocumentRoot/i\ServerName knpu_qa.l" /etc/apache2/sites-available/default
+  - echo "127.0.0.1 netdev.gamingcalendar.com" | sudo tee -a /etc/hosts
+  - sudo /etc/init.d/apache2 restart
   - composer install --prefer-dist --no-interaction
 
 script: vendor/bin/behat
