--- a/.travis.yml
+++ b/.travis.yml
@@ -7,17 +7,9 @@ php:
   - hhvm
 
 before_script:
-  - php-cgi --version
-  - dir /home/travis/.phpenv/versions -A
-  - sudo apt-get -qq install nginx
-  - php-cgi -b 127.0.0.1:9000 &
-  - sudo nginx -c app/tests/nginx.conf -p "$PWD/"
-  - composer self-update -n
-  - composer install --dev -n --prefer-source
-  - mysql -e "create database calendar"
+  - mysql -e 'create database `test_calendar`;'"
+  - composer install -n --prefer-source
+  - php artisan migrate --seed
+  - php codecept build
 
-script: vendor/bin/behat
-
-after_script:
-  - wget https://scrutinizer-ci.com/ocular.phar
-  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+script: php codecept run
