--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ php:
   - hhvm
 
 before_script:
-  - mysql -e 'create database `test_calendar`;'"
+  - "mysql -e 'create database `test_calendar`;'"
   - composer install -n --prefer-source
   - php artisan migrate --seed
   - php codecept build
