--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ php:
   - hhvm
 
 before_script:
+  - phpenv config-add travis.ini
   - "mysql -e 'create database `test_calendar`;'"
   - composer install -n --prefer-source
   - php artisan migrate --seed
