--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ php:
   - hhvm
 
 before_script:
-  - phpenv config-add travis.ini
+  - echo "extension = <extension>.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
   - "mysql -e 'create database `test_calendar`;'"
   - composer install -n --prefer-source
   - php artisan migrate --seed
