--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,12 @@ php:
   - hhvm
 
 before_script:
-  - phpenv config-add travis.ini
-  - php -m
+  - wget http://download.zeromq.org/zeromq-3.2.2.tar.gz
+  - tar xzvf zeromq-3.2.2.tar.gz
+  - sh -c "cd zeromq-3.2.2 && ./configure --prefix=/usr/local && sudo make install"
+  - git clone https://github.com/mkoppanen/php-zmq.git
+  - sh -c "cd php-zmq && phpize && ./configure --with-zmq=/usr/local && make && sudo make install"
+  - echo "extension=zmq.so" >> `php --ini | grep "Loaded Configuration" | sed -e "s|.*:\s*||"`
   - "mysql -e 'create database `test_calendar`;'"
   - composer install -n --prefer-source
   - php artisan migrate --seed
