--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ before_script:
   - php artisan migrate --seed --env="testing"
   - php codecept build
 
-script: php codecept run
+script: "vendor/bin/codecept" run
