Codeception Test boilerplates. Updates to scrutinizer

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -44,3 +44,6 @@ filter:
     excluded_paths:
         - app/tests
         - app/views/*.blade.php
+        - app/views/*/*.blade.php
+        - app/views/*/*/*.blade.php
+        - app/Authority
