Ignore migrations and seeds for scrutin.

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -42,6 +42,8 @@ tools:
     php_sim: true
 filter:
     excluded_paths:
+        - app/database/migrations
+        - app/database/seeds
         - app/tests
         - app/views/*.blade.php
         - app/views/*/*.blade.php
