--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,6 @@ before_script:
   - composer install -n --prefer-source
   - php artisan migrate --seed --env="testing"
   - vendor/bin/codecept build
+  - php artisan dump-autoload
 
-script: vendor/bin/codecept run
+script: vendor/bin/codecept run --steps --colors
