Scrutinizer updates to ignore some core laravel files which shouldn't be inspected.

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -49,3 +49,5 @@ filter:
         - app/views/*/*.blade.php
         - app/views/*/*/*.blade.php
         - app/Authority/*
+		- bootstrap/autoload.php
+		- server.php
