--- a/app/tests/acceptance.suite.yml
+++ b/app/tests/acceptance.suite.yml
@@ -15,4 +15,4 @@ modules:
         - WebHelper
     config:
         PhpBrowser:
-            url: 'http://netdev.gamingcalendar.com'
+            url: 'http://localhost:8000'
